# TinyLA

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/tinyla/: init.h  ops.h  rand.h  tensor.h  tensor.hpp  tinyla.h
src/: init.c  tensor.c  tensor.cpp
src/backend/: dispatcher.c  dispatcher.h  op_wrapper.c  op_wrapper.h
src/cpu/: alignment.c  alignment.h  cpu_features.c  cpu_features.h
src/cpu/ops/: add.h  add_scalar.c  add_scalar.h  div.h  element_wise.cpp  element_wise.h  functors.hpp  mul.h  ops.hpp  sub.h
src/cpu/ops/element_wise/: element_wise.cpp  element_wise.h  functors.hpp  impl.hpp
src/cpu/ops/gemm/: common.hpp  functors.hpp  gemm.cpp  gemm.h  impl.hpp
src/cpu/ops/scalar/: add_scalar.c  div_scalar.c  mul_scalar.c  sub_scalar.c
src/cpu/ops/vec128/: add_vec128.c  div_vec128.c  mul_vec128.c  sub_vec128.c
src/cpu/ops/vec256/: add_vec256.c  div_vec256.c  mul_vec256.c  sub_vec256.c
src/cuda/: cuda_macros.h
src/cuda/init/: ones.cu  ones.h
src/cuda/ops/: add.cu  add.h  div.cu  div.h  element_wise.cu  mul.cu  mul.h  ops.cuh  sub.cu  sub.h
src/cuda/ops/element_wise/: element_wise.cu  element_wise.h  functors.cuh  impl.cuh
src/cuda/ops/gemm/: gemm.cu  gemm.h
src/memory/: tensor_desc.c  tensor_desc.h  tla_alloc.c  tla_alloc.h
src/rand/: philox.cu  philox.hpp  philox_common.hpp  rand.cpp  rand.h
tests/: test_cpu.c  test_cpu.cpp  test_cuda.c  test_cuda.cpp
